--- a/styles/index.css
+++ b/styles/index.css
@@ -15,12 +15,11 @@
   }
     .hero-content {
       position: absolute !important;
-      margin-top: 1px !important;
+      margin-top: -14% !important;
       left: 0;
       right: 0;
       width: 100vw;
     }
-    padding: 0.5rem 1.1rem !important;
   }
 
 html, body {
